// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItem renders with defaultProps 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <button
    className="ax-context-menu__item-single"
    disabled={undefined}
    onClick={undefined}
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
  </button>
</li>
`;

exports[`ContextMenuItem renders with disabled 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <button
    className="ax-context-menu__item-single"
    disabled={true}
    onClick={undefined}
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
  </button>
</li>
`;

exports[`ContextMenuItem renders with multiSelect 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <div
    className="ax-context-menu__item-multi"
    disabled={undefined}
  >
    <label
      className="ax-chedio-buttox__container ax-space--x2"
      onClick={undefined}
      title={undefined}
    >
      <input
        checked={undefined}
        className="ax-chedio-buttox ax-checkbox"
        disabled={undefined}
        name={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <span
        className="ax-chedio-buttox__indicator ax-checkbox__indicator"
      />
      <span
        className="ax-chedio-buttox__label"
      >
        Lorem ipsum
      </span>
    </label>
  </div>
</li>
`;

exports[`ContextMenuItem renders with multiSelect and selected 1`] = `
<li
  className="ax-context-menu__list-item ax-text--strong"
>
  <div
    className="ax-context-menu__item-multi"
    disabled={undefined}
  >
    <label
      className="ax-chedio-buttox__container ax-space--x2"
      onClick={undefined}
      title={undefined}
    >
      <input
        checked={true}
        className="ax-chedio-buttox ax-checkbox"
        disabled={undefined}
        name={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <span
        className="ax-chedio-buttox__indicator ax-checkbox__indicator"
      />
      <span
        className="ax-chedio-buttox__label"
      >
        Lorem ipsum
      </span>
    </label>
  </div>
</li>
`;

exports[`ContextMenuItem renders with multiSelect and title 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <div
    className="ax-context-menu__item-multi"
    disabled={undefined}
  >
    <label
      className="ax-chedio-buttox__container ax-space--x2"
      onClick={undefined}
      title="Lorem ipsum dolor sit amet"
    >
      <input
        checked={undefined}
        className="ax-chedio-buttox ax-checkbox"
        disabled={undefined}
        name={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <span
        className="ax-chedio-buttox__indicator ax-checkbox__indicator"
      />
      <span
        className="ax-chedio-buttox__label"
      >
        Lorem ipsum
      </span>
    </label>
  </div>
</li>
`;

exports[`ContextMenuItem renders with selected 1`] = `
<li
  className="ax-context-menu__list-item ax-text--strong"
>
  <button
    className="ax-context-menu__item-single ax-context-menu__item-single--selected"
    disabled={undefined}
    onClick={undefined}
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
    <div
      className="ax-context-menu__item-icon"
    >
      <svg
        className="ax-icon ax-icon--tick ax-cloak ax-cloak--visible"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M3.25 8.25L6 11l6.75-6.75\\" fill-rule=\\"nonzero\\" stroke=\\"currentColor\\" stroke-width=\\"2.1\\" fill=\\"none\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </div>
  </button>
</li>
`;

exports[`ContextMenuItem renders with title 1`] = `
<li
  className="ax-context-menu__list-item"
>
  <button
    className="ax-context-menu__item-single"
    disabled={undefined}
    onClick={undefined}
    title="Lorem ipsum dolor sit amet"
  >
    <div
      className="ax-context-menu__item-content"
    >
      Lorem ipsum
    </div>
  </button>
</li>
`;
